--- a/style.css
+++ b/style.css
@@ -1,37 +1,66 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@900&family=Source+Sans+Pro:wght@600&display=swap');
 body{
     background-color: white;
+    margin: 0px;
+}
+h1{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    font-size: 1.7rem;
+    width: 98vw;
+    font-family: 'Roboto Slab', serif;
+    text-align: center;
+}
+header{
+    width: 98vw;
+    border-bottom: 2px rgb(207, 207, 207) solid;
+    margin-bottom: 10px;
+    height: fit-content;    
 }
 .letter{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.8rem;
     border: 2px solid rgb(187, 187, 187);
     border-radius: 2%;
-    min-height: 60px;
-    min-width: 60px;
+    min-height: 47px;
+    min-width: 47px;
     -webkit-border-radius: 2%;
     -moz-border-radius: 2%;
     -ms-border-radius: 2%;
     -o-border-radius: 2%;
 }
-
-.game-container {
+.game-container{
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+}
+.square-container {
+    font-family: 'Source Sans Pro', sans-serif;
+    font-weight: 700;
     max-height: 60vh;
     max-width: 350px;
-    display: grid;
+    display: flex;
+    gap: 5px;
+    flex-direction: column;
     margin-left: auto;
     margin-right: auto;
-    grid-template-rows: repeat(5, 1fr);
     align-items: center;
     justify-items: center;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 }
 .guess-container {
-    display: grid;
-    width: 100%;
-    min-height: 75px;
-    grid-template-columns: repeat(5, 1fr);
+    display: flex;
+    gap: 5px;
+    max-width: 100vw;
+    min-height: 30px;
     align-items: center;
     justify-items: center;
 }
 .board-container {
+    width: 98vw;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
@@ -41,19 +70,34 @@ body{
     align-items: center;
 }
 .board-row-container {
+    
+    max-width: 100vw;
     display: flex;
     flex-wrap: nowrap;
+    justify-content: center;
     justify-items: center;
-    gap: 0.5rem;
+    gap: 6px;
     align-items: center;
-    justify-items: center;
 }
 .key {
-    background-color: rgb(213, 213, 213);
+    font-family: 'Source Sans Pro', sans-serif;
+    font-weight: 700;
+    font-size: 1.3rem;
+    padding: 10px;
+    background-color: #d3d6da;
     border: none;
-    min-height: 55px;
-    min-width: 40px;
+    min-height: 60px;
+    max-width: 60px;
+    border-radius: 10%;
+    -webkit-border-radius: 10%;
+    -moz-border-radius: 10%;
+    -ms-border-radius: 10%;
+    -o-border-radius: 10%;
 }
 .key__big {
-    min-width: 60px;
+    font-size: 0.8rem;
+    min-width: 35px;
+}
+input{
+    width: 100px;
 }
