--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ header{
     border-radius: 2%;
     min-height: 47px;
     min-width: 47px;
+    flex-grow: 1;
     -webkit-border-radius: 2%;
     -moz-border-radius: 2%;
     -ms-border-radius: 2%;
@@ -36,6 +37,7 @@ header{
     width: 100vw;
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
 }
 .square-container {
     font-family: 'Source Sans Pro', sans-serif;
@@ -60,39 +62,26 @@ header{
     justify-items: center;
 }
 .board-container {
-    width: 98vw;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
-    max-height: 40vh;
     gap: 1rem;
-    justify-items: center;
-    align-items: center;
 }
 .board-row-container {
-    
-    max-width: 100vw;
+    padding: 5px;
     display: flex;
-    flex-wrap: nowrap;
     justify-content: center;
-    justify-items: center;
     gap: 6px;
-    align-items: center;
 }
 .key {
     font-family: 'Source Sans Pro', sans-serif;
-    font-weight: 700;
     font-size: 1.3rem;
-    padding: 10px;
     background-color: #d3d6da;
     border: none;
-    min-height: 60px;
-    max-width: 60px;
-    border-radius: 10%;
-    -webkit-border-radius: 10%;
-    -moz-border-radius: 10%;
-    -ms-border-radius: 10%;
-    -o-border-radius: 10%;
+    padding: 1px;
+    min-height: 50px;
+    min-width: 20px;
+    flex-grow: 1;
 }
 .key:active{
     background-color: gray;
